// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderer 1`] = `
<div
  className="StartujiciProTyp-grid"
>
  <a
    aria-current={false}
    className="StartujiciProTyp-item Startujici-dokonceno"
    href="/prihlasky/10"
    onClick={[Function]}
    style={undefined}
  >
    7
  </a>
</div>
`;

exports[`renders LegendaOdstartovani 1`] = `
<div
  className="Startujici_legenda"
>
  Legenda: 
  <span
    className="Startujici_legenda_item Startujici-dokonceno label label-default"
  >
    dokončeno
  </span>
  <span
    className="Startujici_legenda_item Startujici-nedokonceno label label-default"
  >
    nedokončeno
  </span>
  <span
    className="Startujici_legenda_item Startujici-na-trase label label-default"
  >
    na trase
  </span>
</div>
`;

exports[`renders LegendaPrihlaseni 1`] = `
<div
  className="Startujici_legenda"
>
  Legenda: 
  <span
    className="Startujici_legenda_item Startujici-dokonceno label label-default"
  >
    dokončeno
  </span>
  <span
    className="Startujici_legenda_item Startujici-nedokonceno label label-default"
  >
    nedokončeno
  </span>
  <span
    className="Startujici_legenda_item Startujici-na-trase label label-default"
  >
    na trase
  </span>
  <span
    className="Startujici_legenda_item Startujici-neaktivni label label-default"
  >
    neaktivní
  </span>
</div>
`;

exports[`renders Startujici 1`] = `
<div
  className="Startujici_div"
>
  <div
    className="Startujici_buttons"
  >
    <Button
      active={true}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="Startujici_button"
      disabled={false}
      onClick={[Function]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="list-alt"
      />
       Přihlášeni
    </Button>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="success"
      className="Startujici_button"
      disabled={false}
      onClick={[Function]}
    >
      <Glyphicon
        bsClass="glyphicon"
        glyph="road"
      />
       Odstartováni
    </Button>
  </div>
  <Component />
  <div
    className="Startujici_typ"
    key="maraton"
  >
    <div
      className="Startujici_popisek"
    >
      <PopisekKategorie
        typ="maraton"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="maraton"
    />
  </div>
  <div
    className="Startujici_typ"
    key="půlmaraton"
  >
    <div
      className="Startujici_popisek"
    >
      <PopisekKategorie
        typ="půlmaraton"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="půlmaraton"
    />
  </div>
  <div
    className="Startujici_typ"
    key="cyklo"
  >
    <div
      className="Startujici_popisek"
    >
      <PopisekKategorie
        typ="cyklo"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="cyklo"
    />
  </div>
  <div
    className="Startujici_typ"
    key="koloběžka"
  >
    <div
      className="Startujici_popisek"
    >
      <PopisekKategorie
        typ="koloběžka"
      />
    </div>
    <Connect(StartujiciProTyp)
      jenStartujici={false}
      odstartovani={false}
      renderer={[Function]}
      typ="koloběžka"
    />
  </div>
</div>
`;
